# Prism

./: .gitignore  CMakeLists.txt  Makefile  compile_commands.json  new_plug.sh
.cache/clangd/index/: animation.cpp.E745F2DCE40139E4.idx  bezier_creator.cpp.F29B3C1D0484BFAB.idx  ffmpeg.cpp.6756369BD66A6C3A.idx  ffmpeg.cpp.AE2B89782A249B3D.idx  ffmpeg.h.80C678BF105F9098.idx  ffmpeg.h.FEAAD0A4CA968D0D.idx  interpolator.cpp.C52DF7710A1054D0.idx  interpolator.h.90B1A0754BFD54E2.idx  main.cpp.98EDD0203DE9E86A.idx  plug.cpp.3F3D2E98DE581670.idx  plug.h.77E54489CB2A7DE4.idx  step_functions.cpp.B4B512A1BC354DEB.idx
dlls/: CMakeLists.txt  Makefile  template.cpp
dlls/bezier_creator/: CMakeLists.txt  bezier_creator.cpp
dlls/square/: square.cpp
dlls/square_animation/: CMakeLists.txt
plugins/: CMakeLists.txt  CMakeTemplate.txt  template.cpp
plugins/bezier_creator/: CMakeLists.txt  bezier_creator.cpp
plugins/circle_animation/: CMakeLists.txt  circle_animation.cpp
plugins/square_animation/: CMakeLists.txt  animation.cpp
src/: ffmpeg.cpp  ffmpeg.h  interpolator.cpp  interpolator.h  main.cpp  plug.cpp  plug.h
src/common/: env.cpp  env.h  ffmpeg.cpp  ffmpeg.h  task.cpp  task.h
utils/: step_functions.cpp  step_functions.h
